# genesys-notifications

./: .gitignore  CHANGES.md  README.md  requirements.txt  setup.cfg
src/genesys_notifications/: channel.py  exceptions.py  messages.py  timeouts.py
tests/: test_connection.py
