[metadata]
name = genesys-notifications
version = 1.0
description = genesys notifications client
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Petri Savolainen
author_email = petri@koodaamo.fi

keywords = genesys, genesys cloud
license = GPLv3

url = https://github.com/koodaamo/genesys_notifications

classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    websockets
    ujson

[options.packages.find]
where=src
