[metadata]
name = genesys-notifications
version = 1.3
description = genesys notifications client
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Petri Savolainen
author_email = petri@koodaamo.fi

keywords = genesys, genesys cloud
license = GPLv2

url = https://github.com/koodaamo/genesys-notifications

classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    websockets
    ujson

[options.packages.find]
where=src
